@@ -1525,3 +1525,7 @@
 20070202 TAG: Release-0_8_0-pre1 (Release-0_8_0-branch)
 20070204 sound.c: don't disable sound completely if we don't enable sound
          after an unpause (fixes bug #1648246) (Fred).
+20070210 sound/{coreaudiosound.c,sdlsound.c}: make sound fifo two frames in
+         size rather than a multiple of the sound fragment size, make sound
+         callbacks run after some sound is available, calculate SDL fragment
+         size based on machine speed and output frequency (Fred).
